--- a/Home/pages/login/login.wxml
+++ b/Home/pages/login/login.wxml
@@ -17,7 +17,7 @@
       <view class="weui-cell weui-cell_input weui-cell_vcode">
       </view>
       <view class="page__bd page__bd_spacing marginTop buttonStyle">
-        <button class="weui-btn" >登录</button>
+        <button class="weui-btn" bindtap='login' >登录</button>
     </view>
     <view class="page__bd page__bd_spacing">
         <view class="weui-flex">
