--- a/Home/app.wxss
+++ b/Home/app.wxss
@@ -1,5 +1,6 @@
-/**app.wxss**/
+  /**app.wxss**/
 @import 'weui.wxss';
+@import 'icon.wxss';
 .container {
   height: 100%;
   display: flex;
@@ -9,3 +10,4 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
