--- a/Home/pages/orderOwner/orderOwner.wxss
+++ b/Home/pages/orderOwner/orderOwner.wxss
@@ -1,1 +1,76 @@
 /* pages/orderOwner/orderOwner.wxss */
+page{
+  width:100%;
+  height: 100%;
+}
+.searchbox{
+  width:80%;
+  font-size: 30rpx;
+  margin:20rpx auto;
+  border-radius:10rpx;
+  padding:15rpx 30rpx;
+  background-color: #ededed;
+}
+.container_order{
+  overflow: hidden;
+  background-color: #f5f5f5;
+  padding-top:20rpx;
+}
+.order{
+  padding: 20rpx;
+  margin:0rpx 25rpx 20rpx 25rpx;
+  background-color: #fff;
+  border-radius: 10rpx;
+}
+.order .order_top{
+  text-align: left;
+  font-size: 30rpx;
+  overflow: hidden;
+  border-bottom: 1rpx solid #cccccc;
+}
+.order .order_top .float_l{
+  float: left;
+  padding-left: 30rpx;
+}
+.order .order_top .float_r{
+  float: right;
+  padding-right: 10rpx;
+}
+.order .order_top .float_r .space_order{
+  font-size:35rpx;
+  color:red;
+  padding: 0 10rpx;
+}
+.order .order_top .float_r .status_order{
+  color:#30bc8f;
+}
+.order .order_container{
+  height:250rpx;
+  
+}
+.order .order_container .headeimg{
+  width:200rpx;
+  height:200rpx;
+  border-radius: 50%;
+  background-color: #ededed;
+  float: left;
+  margin-top: 50rpx;
+}
+.order .order_container .headeimg image{
+  width:200rpx;
+  height:200rpx;
+}
+.order .order_container .content{
+  width:400rpx;
+  float: left;
+  color:#30bc8f;
+  margin-top:20rpx;
+  margin-left:30rpx;
+}
+.order .order_container .content .name{
+  font-size: 40rpx;
+  letter-spacing: 20rpx;
+}
+.order .order_container .content .phone{
+  font-size: 30rpx;
+}
