--- a/Home/pages/orderOwner/orderOwner.wxml
+++ b/Home/pages/orderOwner/orderOwner.wxml
@@ -1,29 +1,54 @@
 <view class='page__owner'>
-  <view>
+  <view class='page_top'>
       <input class='searchbox' placeholder='姓名、电话、楼盘名称'         placeholder-style='text-align:center' confirm-type='Search'>
       </input>
   </view>
-  <view class='container_order'>
-    <view class='order'>
+  <scroll-view class='container_order' scroll-y='true'>
+    <view class='order' wx:for='{{list}}'>
       <view class='order_top'>
-        <text class='float_l'>订单编号：123456</text>
+        <text class='float_l'>订单编号：{{item.ordernum}}</text>
         <text class='float_r'>
-          <text class='status_order'>服务中</text>
+          <text class='status_order'>{{item.status}}</text>
           <text class='space_order'>|</text>
-          <text class='service_order'>陪签服务</text>
+          <text class='service_order'>{{item.service}}</text>
         </text>
       </view>
       <view class='order_container'>
         <view class='headeimg'><image></image></view>
         <view class='content'>
-          <view>
-            <text class='name'>姓名</text>
-            <text class='phone'>15058160000</text>
+          <view class='msg'>
+            <text class='name'>{{item.name}}</text>
+            <text class='phone'>{{item.phone}}</text>
           </view>
           <view class='tips'>
+            <view class='cont'>
+              <view class='iconfont icon-fangwuxinxi'>
+                <text class='words'>房屋类型：{{item.conditon1}}</text>
+              </view>
+            </view>
+            <view class='cont'>
+              <view class='iconfont .icon-fangwumianji'>
+                <text class='words'>房屋面积：{{item.conditon2}}㎡</text>
+              </view>
+            </view>
+            <view class='cont'>
+              <view class='iconfont icon-fuwujiedian'>
+                <text class='words'>当前节点：{{item.conditon3}}</text>
+              </view>
+            </view>
+            <view class='cont'>
+              <view class='iconfont icon-fuwujiedian'>
+                <text class='words'>下个节点：{{item.conditon4}}</text>
+              </view>
+            </view>
+            <view class='cont'>
+              <text class='iconfont icon-location2'>
+                <text class='words'>{{item.address}}</text>
+              </text>
+            </view>
           </view>
         </view>
       </view>
     </view>
-  </view>
+  </scroll-view>
 </view>
