--- a/Home/icon.wxss
+++ b/Home/icon.wxss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 707796 */
-  src: url('//at.alicdn.com/t/font_707796_dz5yh2lxtw.eot');
-  src: url('//at.alicdn.com/t/font_707796_dz5yh2lxtw.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_707796_dz5yh2lxtw.woff') format('woff'),
-  url('//at.alicdn.com/t/font_707796_dz5yh2lxtw.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_707796_dz5yh2lxtw.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_707796_hqqd49j1h5k.eot');
+  src: url('//at.alicdn.com/t/font_707796_hqqd49j1h5k.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_707796_hqqd49j1h5k.woff') format('woff'),
+  url('//at.alicdn.com/t/font_707796_hqqd49j1h5k.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_707796_hqqd49j1h5k.svg#iconfont') format('svg');
 }
 .iconfont {  
   font-family: "iconfont" !important;  
@@ -18,3 +18,8 @@
 .icon-pass:before { content: "\e60e"}  
 .icon-email:before { content: "\e663"}  
 .icon-users:before { content: "\e62f"}  
+.icon-mianji:before { content: "\e634"}  
+.icon-fuwujiedian:before { content: "\e7c9"}
+.icon-fangwuxinxi:before { content: "\e60b"}
+.icon-location2:before { content: "\e611"}
+.icon-fangwumianji:before { content: "\e673"}
