--- a/Home/pages/orderOwner/orderOwner.wxss
+++ b/Home/pages/orderOwner/orderOwner.wxss
@@ -1,7 +1,6 @@
 /* pages/orderOwner/orderOwner.wxss */
 page{
   width:100%;
-  height: 100%;
 }
 .searchbox{
   width:80%;
@@ -12,6 +11,7 @@ page{
   background-color: #ededed;
 }
 .container_order{
+  height:930rpx;
   overflow: hidden;
   background-color: #f5f5f5;
   padding-top:20rpx;
@@ -24,9 +24,10 @@ page{
 }
 .order .order_top{
   text-align: left;
-  font-size: 30rpx;
+  font-size: 25rpx;
   overflow: hidden;
   border-bottom: 1rpx solid #cccccc;
+  padding-bottom: 10rpx;
 }
 .order .order_top .float_l{
   float: left;
@@ -37,7 +38,7 @@ page{
   padding-right: 10rpx;
 }
 .order .order_top .float_r .space_order{
-  font-size:35rpx;
+  font-size:25rpx;
   color:red;
   padding: 0 10rpx;
 }
@@ -45,32 +46,57 @@ page{
   color:#30bc8f;
 }
 .order .order_container{
-  height:250rpx;
-  
+  height:310rpx;
 }
 .order .order_container .headeimg{
-  width:200rpx;
-  height:200rpx;
+  width:150rpx;
+  height:150rpx;
   border-radius: 50%;
   background-color: #ededed;
   float: left;
-  margin-top: 50rpx;
+  margin-top: 70rpx;
+  margin-left:20rpx;
 }
 .order .order_container .headeimg image{
-  width:200rpx;
-  height:200rpx;
+  width:150rpx;
+  height:150rpx;
 }
 .order .order_container .content{
-  width:400rpx;
+  width:460rpx;
   float: left;
-  color:#30bc8f;
   margin-top:20rpx;
   margin-left:30rpx;
 }
+.order .order_container .content .msg{
+  color:#30bc8f;
+}
 .order .order_container .content .name{
-  font-size: 40rpx;
+  font-size: 35rpx;
   letter-spacing: 20rpx;
 }
 .order .order_container .content .phone{
+  font-size: 26rpx;
+}
+.order .order_container .content .tips{
+  color:#757575;
   font-size: 30rpx;
+}
+.order .order_container .content .tips .iconfont{
+  font-size: 30rpx;
+}
+.order .order_container .content .tips .icon-fangwuxinxi{
+  font-size: 36rpx;
+  margin-left: -2rpx;
+}
+.order .order_container .content .tips .icon-mianji{
+  font-size: 35rpx;
+}
+.order .order_container .content .tips .words{
+  font-size: 25rpx;
+}
+.order .order_container .content .tips .cont{
+  width:90%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
