--- a/Home/pages/view/login/login.wxml
+++ b/Home/pages/view/login/login.wxml
@@ -1,6 +1,6 @@
 <view class='page__bd'>
   <view class="cimgSize">
-    <image src='../images/logo.png'></image>
+    <image src='../../images/logo.png'></image>
     <text>绿城装修管家</text>
   </view>
   <form>
