--- a/Home/pages/view/setInfo/setInfo.wxml
+++ b/Home/pages/view/setInfo/setInfo.wxml
@@ -1,23 +1,14 @@
 <view class='mtop'>
 <view class="weui-cells weui-cells_after-title">
     <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__hd">
-            <image src="{{icon}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
         <view class="weui-cell__bd">头像</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">说明文字</view>
     </navigator>
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__hd">
-            <image src="{{icon}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
+    <navigator url="../../view/setpass/setpass" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">修改密码</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
     </navigator>
     <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__hd">
-            <image src="{{icon}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
         <view class="weui-cell__bd">当前版本</view>
         <view class="weui-cell__ft weui-cell__ft_in-access">1.01</view>
     </navigator>
