--- a/Home/pages/view/userInfo/userInfo.wxml
+++ b/Home/pages/view/userInfo/userInfo.wxml
@@ -5,9 +5,8 @@
       <image src='../../images/logo.png'></image>
     </view>
   </view>
-  <view class='userText'>
-
-    <view class='marginBox'>
+  <view class='userText'  bindtap='goPerfect' >
+    <view class='marginBox' >
       <view class='usrName'>
         汪升维
       </view>
@@ -72,7 +71,7 @@
       <view class="weui-cell__bd">分享朋友</view>
       <view class="weui-cell__ft weui-cell__ft_in-access"></view>
     </navigator>
-    <navigator url="../view/setInfo/setInfo" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <navigator url="../../view/setInfo/setInfo" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd">
         <view class="iconfont icon-set" ></view>  
       </view>
