--- a/Home/icon.wxss
+++ b/Home/icon.wxss
@@ -1,11 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 707796 */
-  src: url('//at.alicdn.com/t/font_707796_23je6dhiif4.eot');
-  src: url('//at.alicdn.com/t/font_707796_23je6dhiif4.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_707796_23je6dhiif4.woff') format('woff'),
-  url('//at.alicdn.com/t/font_707796_23je6dhiif4.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_707796_23je6dhiif4.svg#iconfont') format('svg');
-
+  src: url('//at.alicdn.com/t/font_707796_29d4zca5frx.eot');
+  src: url('//at.alicdn.com/t/font_707796_29d4zca5frx.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_707796_29d4zca5frx.woff') format('woff'),
+  url('//at.alicdn.com/t/font_707796_29d4zca5frx.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_707796_29d4zca5frx.svg#iconfont') format('svg');
 }
 .iconfont {  
   font-family: "iconfont" !important;  
@@ -32,3 +31,5 @@
 .icon-jixiang:before { content: "\e770"}
 .icon-start:before { content: "\e639"}
 .icon-jiantou:before { content: "\e65e"}
+.icon-zhaoxiangji:before { content: "\e664"}
+.icon-rili:before { content: "\e602"}
