--- a/Home/pages/view/orderOwner/details/details.wxss
+++ b/Home/pages/view/orderOwner/details/details.wxss
@@ -3,6 +3,7 @@
   font-size:25rpx;
   color:#757575;
   background-color: #f5f5f5;
+  padding-bottom:80rpx;
 }
 .orderdetail>view:not(.overback){
   padding: 10rpx 0rpx;
@@ -165,4 +166,12 @@
 }
 .dialog .btngroup .certain{
   border-right: 1rpx solid #cccccc;
+}
+.borderstyle{
+  width:50%;
+  height:40rpx;
+  border:1px solid #cccccc;
+  position: absolute;
+  top:0;
+  left:110rpx;
 }
