--- a/Home/pages/view/demandinformaction/demandinformaction.wxss
+++ b/Home/pages/view/demandinformaction/demandinformaction.wxss
@@ -1,4 +1,4 @@
-/* pages/view/ordercontract/ordercontract.wxss */view{
+view{
   font-size: 12px;
   color:#3f3f3f;
 }
@@ -13,7 +13,6 @@
   width: 40px;
   text-align: center;
 }
-
 .newSzie{
   border: none;
   width: 40%;
@@ -26,7 +25,7 @@
   padding-top: 6px;
 }
 .newWidth{
-  width:47.5%;
+  width:24%;
   float: left;
   line-height: 40px;
   min-height: 40px;
@@ -58,4 +57,30 @@
  background: #11b786;
  color: #fff;
  border-radius: 0;
+}
+.ddsize{
+  float:left;
+  width:100%;
+  height: 40px;
+  line-height: 40px;
+  padding-left: 20px;
+}
+.ddsize input{
+  width: 60%;
+  
+ height: 40px;
+ float: left;
+}
+.ddsize text{
+  width:18%;
+  float: left;
+ 
+}
+.clearfloat:after{display:block;clear:both;content:"";visibility:hidden;height:0}
+.clearafter:after{
+  content: "";
+  width: 0;
+}
+.clearafter{
+  padding: 10px 20px 0px;
 }
