--- a/Home/pages/view/userLogin/login/login.wxml
+++ b/Home/pages/view/userLogin/login/login.wxml
@@ -3,18 +3,18 @@
     <image src='../../../images/logo.png'></image>
     <text>绿城装修管家</text>
   </view>
-  <form>
+  <form bindsubmit="formSubmit" >
     <view class='boxpositio'>
       <view class=" weui-cell_input weui-cell_vcode">
           <view class="weui-cell__bd">
               <view class="iconfont icon-user"></view>  
-              <input class="weui-input" placeholder="手机号码" />
+              <input name="iphone" class="weui-input" placeholder="手机号码" />
           </view>
       </view>
       <view class=" weui-cell_input weui-cell_vcode">
           <view class="weui-cell__bd">
           <view class="iconfont icon-pass"></view>  
-              <input class="weui-input" placeholder="输入密码" />
+              <input type='password' name="password"  class="weui-input" placeholder="输入密码" />
           </view>
       </view>
       <view class="page__bd page__bd_spacing">
@@ -24,7 +24,7 @@
         </view>
     </view>
       <view class="page__bd page__bd_spacing marginTop buttonStyle">
-        <button class="weui-btn" bindtap='login' >登录</button>
+        <button formType="submit" class="weui-btn" bindtap='login' >登录</button>
     </view>
     <view class='textIfo'>
       <text>绿城服务旗下集团唯一第三方监管</text>
